# healthcare-data-integration

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: fhir_patient.json  lab_patients.csv  sample.837
docs/: architecture.md
sql/: init_postgres.sql
src/clinical_etl/: __init__.py  main.py
src/clinical_etl/config/: __init__.py  logging_config.py  settings.py
src/clinical_etl/extract/: __init__.py  edi_extractor.py  fhir_extractor.py  lab_csv_extractor.py  oracle_ehr_extractor.py
src/clinical_etl/load/: __init__.py  adls_loader.py  elasticsearch_loader.py  postgres_loader.py
src/clinical_etl/models/: __init__.py  claim.py  encounter.py  patient.py
src/clinical_etl/orchestration/: __init__.py  tasks.py
src/clinical_etl/transform/: __init__.py  adjudication.py  code_validator.py  masking.py  matching.py
src/clinical_etl/utils/: __init__.py  audit.py
tests/: conftest.py
tests/test_transform/: test_codes.py  test_masking.py  test_matching.py
