[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical_etl"
version = "0.1.0"
description = "Patient master index ETL across FHIR/Oracle/Lab CSV/EDI with Safe-Harbor masking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["etl", "healthcare", "fhir", "hl7", "edi", "hipaa", "data-engineering"]
dependencies = [
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "oracledb>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "paramiko>=3.4.0",
    "azure-storage-blob>=12.19.0",
    "deltalake>=0.16.0",
    "elasticsearch>=8.12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "fhir.resources>=7.1.0",
    "hl7apy>=1.3.4",
    "rapidfuzz>=3.6.0",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.9.0",
    "faker>=24.0.0",
]

[project.scripts]
clinical_etl = "clinical_etl.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "A", "C4"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
